--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "cookies-next": "^5.0.2",
     "framer-motion": "^11.11.8",
     "generate-password": "^1.7.1",
     "inter": "^2.1.0",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
